gh workflow update

--- a/prefect_register/action.yml
+++ b/prefect_register/action.yml
@@ -6,7 +6,7 @@ inputs:
     description: 'Path where the workflow lives'
     required: true
 # outputs:
-#   time: # id of output
+#   time: # id of output.
 #     description: 'The time we greeted you'
 runs:
   using: 'docker'
