--- a/prefect_register/action.yml
+++ b/prefect_register/action.yml
@@ -6,6 +6,9 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
+  workflow-path:
+    description: 'Workflow Path'
+    required: true
 outputs:
   time: # id of output
     description: 'The time we greeted you'
@@ -13,4 +16,4 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.who-to-greet }}
+    - ${{ inputs.workflow-path }}
