--- a/prefect_register/Dockerfile
+++ b/prefect_register/Dockerfile
@@ -1,5 +1,7 @@
 # Container image that runs your code
 FROM alpine:3.10
+RUN apk update
+RUN apk add git
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY entrypoint.sh /entrypoint.sh
