--- a/prefect_register/action.yml
+++ b/prefect_register/action.yml
@@ -23,3 +23,4 @@ runs:
     - ${{ inputs.git_url }}
     - ${{ inputs.branch_name }}
     - ${{ inputs.commit_sha }}
+    - ${{ inputs.workflow_path }}
