--- a/prefect_register/Dockerfile
+++ b/prefect_register/Dockerfile
@@ -5,6 +5,7 @@ RUN apk add git
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY entrypoint.sh /entrypoint.sh
+COPY workflow_register.py /workflow_register.py
 
 # Code file to execute when the docker container starts up (`entrypoint.sh`)
 ENTRYPOINT ["/entrypoint.sh"]
