--- a/prefect_register/Dockerfile
+++ b/prefect_register/Dockerfile
@@ -2,7 +2,7 @@
 FROM alpine:3.10
 RUN apk update
 RUN apk add git
-RUN apk add build-base
+#RUN apk add build-base
 
 RUN echo "**** install Python ****" && \
     apk add --no-cache python3 && \
@@ -14,7 +14,9 @@ RUN echo "**** install Python ****" && \
     pip3 install --no-cache --upgrade pip setuptools wheel && \
     if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi
 
-RUN apk add python3-dev
+RUN apk add --no-cache --virtual .build-deps gcc musl-dev
+RUN pip install cython
+RUN apk del .build-deps gcc musl-dev
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY entrypoint.sh /entrypoint.sh
