--- a/prefect_register/Dockerfile
+++ b/prefect_register/Dockerfile
@@ -14,9 +14,9 @@ RUN echo "**** install Python ****" && \
     pip3 install --no-cache --upgrade pip setuptools wheel && \
     if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi
 
-RUN apk add --no-cache --virtual .build-deps gcc musl-dev
-RUN pip install cython
-RUN apk del .build-deps gcc musl-dev
+RUN apk add --no-cache --virtual .build-deps gcc musl-dev \
+    && pip3 install cython \
+    && apk del .build-deps gcc musl-dev
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY entrypoint.sh /entrypoint.sh
