--- a/prefect_register/Dockerfile
+++ b/prefect_register/Dockerfile
@@ -1,6 +1,7 @@
 # Container image that runs your code
 FROM alpine:3.10
 RUN apk update
+RUN apk upgrade 
 RUN apk add git
 #RUN apk add build-base
 
@@ -14,9 +15,8 @@ RUN echo "**** install Python ****" && \
     pip3 install --no-cache --upgrade pip setuptools wheel && \
     if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi
 
-RUN apk add --no-cache --virtual .build-deps gcc musl-dev \
-    && pip3 install cython \
-    && apk del .build-deps gcc musl-dev
+RUN apk add gcc musl-dev libc-dev libc6-compat linux-headers build-base git libffi-dev openssl-dev
+
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY entrypoint.sh /entrypoint.sh
