--- a/prefect_register/Dockerfile
+++ b/prefect_register/Dockerfile
@@ -5,6 +5,8 @@ RUN apk upgrade
 RUN apk add git
 #RUN apk add build-base
 
+RUN apk add gcc python3-dev python-devel musl-dev libc-dev libc6-compat linux-headers build-base git libffi-dev openssl-dev
+
 RUN echo "**** install Python ****" && \
     apk add --no-cache python3 && \
     if [ ! -e /usr/bin/python ]; then ln -sf python3 /usr/bin/python ; fi && \
@@ -14,8 +16,6 @@ RUN echo "**** install Python ****" && \
     rm -r /usr/lib/python*/ensurepip && \
     pip3 install --no-cache --upgrade pip setuptools wheel && \
     if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi
-
-RUN apk add gcc musl-dev libc-dev libc6-compat linux-headers build-base git libffi-dev openssl-dev
 
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
