--- a/prefect_register/Dockerfile
+++ b/prefect_register/Dockerfile
@@ -4,6 +4,7 @@ RUN apk update
 RUN apk upgrade 
 RUN apk add git
 
+# Install Python
 RUN echo "**** install Python ****" && \
     apk add --no-cache python3 && \
     if [ ! -e /usr/bin/python ]; then ln -sf python3 /usr/bin/python ; fi && \
@@ -14,7 +15,7 @@ RUN echo "**** install Python ****" && \
     pip3 install --no-cache --upgrade pip setuptools wheel && \
     if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi
 
-#RUN apk add gcc python3-dev musl-dev libc-dev libc6-compat linux-headers build-base libffi-dev openssl-dev
+# Install required packages for Prefect
 RUN apk add gcc python3-dev build-base musl-dev libc-dev openssl-dev linux-headers
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
