--- a/prefect_register/Dockerfile
+++ b/prefect_register/Dockerfile
@@ -4,7 +4,8 @@ RUN apk update
 RUN apk upgrade 
 RUN apk add git
 RUN apk add docker
-RUN service docker start
+RUN apk add openrc --no-cache
+RUN rc-service docker start
 
 # Install Python
 RUN echo "**** install Python ****" && \
