--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -10,16 +10,16 @@ env:
     env: 'dev'
     aws_region: 'ap-southeast-2'
     # terraform
-    tf_working_dir: './terraform_infra'
+    tf_working_dir: './aws_infrastructure'
     tf_version: 'latest'
     tf_artifacts_bucket: 'dataflow-automation-infra-artifacts'
     tf_state_bucket: 'dataflow-automation-infra-tf-state'
     # prefect agent
-    prefect_agent_working_dir: './prefect_agent'
+    prefect_agent_working_dir: './prefect/prefect_agent'
     agent_cpu: 512
     agent_memory: 1024
     # prefect project
-    prefect_project_working_dir: './prefect_project'
+    prefect_project_working_dir: './prefect/prefect_project'
 
 
 jobs:
@@ -128,7 +128,7 @@ jobs:
         run: |
           cd ${{ env.prefect_agent_working_dir }}
 
-          cp ../shared/helpers.py .
+          cp ../prefect/helpers.py .
           
           docker build \
           --build-arg aws_region_arg=${{ env.aws_region }} \
@@ -159,7 +159,7 @@ jobs:
       - name: Create Prefect Project
         run: |
           cd ${{ env.prefect_project_working_dir }}
-          cp ../shared/helpers.py .
+          cp ../prefect/helpers.py .
 
           pip3 install --user setuptools
           pip3 install --user prefect
