--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -128,7 +128,7 @@ jobs:
         run: |
           cd ${{ env.prefect_agent_working_dir }}
 
-          cp ../prefect/helpers.py .
+          cp ./prefect/helpers.py .
           
           docker build \
           --build-arg aws_region_arg=${{ env.aws_region }} \
@@ -159,7 +159,7 @@ jobs:
       - name: Create Prefect Project
         run: |
           cd ${{ env.prefect_project_working_dir }}
-          cp ../prefect/helpers.py .
+          cp ./prefect/helpers.py .
 
           pip3 install --user setuptools
           pip3 install --user prefect
