--- a/prefect/prefect_register/action.yml
+++ b/prefect/prefect_register/action.yml
@@ -19,6 +19,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  pre-entrypoint: 'setup.sh'
   args:
     - ${{ inputs.env }}
     - ${{ inputs.git_url }}
