--- a/prefect/prefect_agent/Dockerfile
+++ b/prefect/prefect_agent/Dockerfile
@@ -28,7 +28,7 @@ ARG environment_arg=None
 ENV environment_env=$environment_arg
 
 COPY start_agent.sh /usr/local/start_agent.sh
-COPY helpers.py /usr/local/helpers.py
+COPY prefect_helpers.py /usr/local/prefect_helpers.py
 COPY start_agent.py /usr/local/start_agent.py
 
 ENTRYPOINT /usr/local/start_agent.sh \
