--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -18,6 +18,7 @@ env:
     prefect_agent_working_dir: './prefect/prefect_agent'
     agent_cpu: 512
     agent_memory: 1024
+    prefect_token_secret_name: prefectagenttoken
     # prefect project
     prefect_project_working_dir: './prefect/prefect_project'
 
@@ -165,5 +166,6 @@ jobs:
           pip3 install --user prefect
           pip3 install --user boto3
 
-          python3 create_prefect_project.py \
+          python3 prefect_project_setup.py \
             --environment=${{ env.env }}
+            --prefect_token_secret_name=${{ env.prefect_token_secret_name }}
