--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -18,6 +18,7 @@ env:
     prefect_agent_working_dir: './prefect/prefect_agent'
     agent_cpu: 512
     agent_memory: 1024
+    prefect_token_secret_name: prefectagenttoken
     # prefect project
     prefect_project_working_dir: './prefect/prefect_project'
 
@@ -139,6 +140,7 @@ jobs:
           --build-arg execution_role_arn_arg=${{ steps.read_tf_outputs.outputs.agent_ecs_task_execution_role_arn }} \
           --build-arg subnets_arg=${{ steps.read_tf_outputs.outputs.vpc_public_subnets }} \
           --build-arg environment_arg=${{ env.env }} \
+          --build-arg token_secret_name_arg=${{ env.token_secret_name }} \
           -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
@@ -165,5 +167,6 @@ jobs:
           pip3 install --user prefect
           pip3 install --user boto3
 
-          python3 create_prefect_project.py \
+          python3 prefect_project_setup.py \
             --environment=${{ env.env }}
+            --prefect_token_secret_name=${{ env.prefect_token_secret_name }}
