--- a/prefect/prefect_agent/Dockerfile
+++ b/prefect/prefect_agent/Dockerfile
@@ -1,5 +1,16 @@
 FROM prefecthq/prefect
 
+# Install required libraries
+RUN pip3 install boto3
+
+# Copy required agent startup files
+COPY prefect_helpers.py /usr/local/prefect_helpers.py
+COPY start_agent.py /usr/local/start_agent.py
+
+# Agent Configuration variables
+ARG agent_type_arg=None
+ENV agent_type_env=$agent_type_arg
+
 ARG cluster_name_arg=None
 ENV cluster_name_env=$cluster_name_arg
 
@@ -30,18 +41,15 @@ ENV environment_env=$environment_arg
 ARG prefect_token_secret_name_arg=None
 ENV prefect_token_secret_name_env=$prefect_token_secret_name_arg
 
-
-COPY start_agent.sh /usr/local/start_agent.sh
-COPY prefect_helpers.py /usr/local/prefect_helpers.py
-COPY start_agent.py /usr/local/start_agent.py
-
-ENTRYPOINT /usr/local/start_agent.sh \
-    $cluster_name_env \
-    $aws_region_env \ 
-    $agent_cpu_env \
-    $agent_memory_env \
-    $task_role_arn_env \
-    $execution_role_arn_env \
-    $subnets_env \
-    $environment_env \
-    $prefect_token_secret_name_env
+# Set to start the agent when image comes up 
+ENTRYPOINT python3 /usr/local/start_agent.py \
+    --agent_type=$agent_type_env \
+    --cluster_name=$cluster_name_env \
+    --aws_region=$aws_region_env \
+    --agent_cpu=$agent_cpu_env \
+    --agent_memory=$agent_memory_env \
+    --task_role_arn=$task_role_arn_env \
+    --execution_role_arn=$execution_role_arn_env \
+    --subnets=$subnets_env \
+    --environment=$environment_env \
+    --prefect_token_secret_name=$prefect_token_secret_name_env
